SOUNDNESS R131: extend the supertype walk to EXTERNAL owners, denylisted by the classifier's own rule shape
handleMethodInsn's supertype re-classification was gated on a PROJECT owner, so
no JDK/library subtype of a modelled type ever got it. Measured on a probe
fixture BEFORE any code changed: DataInputStream.read, LineNumberReader.read,
GZIPInputStream.read, ZipInputStream.read, JarInputStream.read,
CipherInputStream.read, GZIPOutputStream.write/close all read SILENT-PURE while
FilterInputStream.read — the supertype that declares them, one hop up — reads
Unknown, which is what that rule's own comment says it INTENDS. Patched by hand
four times already (MulticastSocket, SSLSocket, Conscrypt, R130's thirteen).

ADDITIVE BY CONSTRUCTION, NOT BY ASSERTION. The branch unions into `dir` and does
NOT assign `effect`. That local gates three downstream branches that run only
when the classifier found nothing — crossDepJoin (cross-jar inheritance AND
untypedDepReceiver's disclosure, both on this exact external-owner path),
externalStreamUtility and entryAbstractStream. The first cut DID assign it and
would have suppressed them while its own comment claimed it could only add.

THE DENYLIST IS ASKED OF THE CLASSIFIER, NOT WRITTEN BY HAND: skip a supertype
rule that is OWNER-BLANKET rather than verb-gated, detected by classifying a
method name that cannot exist, at the same descriptor. A hand list would have
been the fifth enumeration.

AND THE ROW'S NAMED FABRICATION SOURCE IS NOT ONE. javax.sql.rowset.CachedRowSet
`next()`/`execute()` are ALREADY Db at HEAD via the direct javax.sql.*RowSet
rule; the non-cursor verbs classify null at the subtype AND at every supertype
(sharedResultSet is verb-gated at both levels). All four cells unchanged. The
real source is javax.net.ssl.SSLServerSocket extends java.net.ServerSocket —
whole-owner Net minus a carve-out list that could never have named
setNeedClientAuth/setUseClientMode/setEnabledProtocols, which are declared only
on the subt